[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/theme1.tres" type="Theme" id=1]
[ext_resource path="res://nickname.gd" type="Script" id=2]

[node name="nickname" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.5 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -200.0
margin_right = 315.0
margin_bottom = 200.0
rect_min_size = Vector2( 630, 400 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -285.0
margin_top = -109.5
margin_right = 285.0
margin_bottom = 109.5
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/vbox"]
margin_right = 570.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter your name"

[node name="name_edit" type="LineEdit" parent="Panel/vbox"]
margin_top = 85.0
margin_right = 570.0
margin_bottom = 175.0
rect_min_size = Vector2( 0, 90 )
text = "Player"
align = 1

[node name="hbox" type="HBoxContainer" parent="Panel/vbox"]
margin_top = 195.0
margin_right = 570.0
margin_bottom = 285.0
alignment = 1

[node name="save_btn" type="Button" parent="Panel/vbox/hbox"]
margin_left = 8.0
margin_right = 258.0
margin_bottom = 90.0
rect_min_size = Vector2( 250, 90 )
text = "save"

[node name="cancel_btn" type="Button" parent="Panel/vbox/hbox"]
margin_left = 262.0
margin_right = 562.0
margin_bottom = 90.0
rect_min_size = Vector2( 300, 0 )
text = "cancel"
[connection signal="pressed" from="Panel/vbox/hbox/save_btn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="Panel/vbox/hbox/cancel_btn" to="." method="_on_cancel_btn_pressed"]
